--- a/examples/pq-autoscale.ipynb
+++ b/examples/pq-autoscale.ipynb
@@ -1,113 +1,153 @@
 {
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Autoscaling units"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the `autoscale()` method, quantities can be automatically scaled:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "1.0 $\\text{mm}$"
+      ],
+      "text/plain": [
+       "1.0 mm"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1e-3 m\n",
+    "a.autoscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "300.0 $\\text{µs}$"
+      ],
+      "text/plain": [
+       "300.0 us"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 0.0003 s \n",
+    "a.autoscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "1.0 $\\text{m}$"
+      ],
+      "text/plain": [
+       "1.0 m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1.0m\n",
+    "a.autoscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "3.00 $\\text{nF}$"
+      ],
+      "text/plain": [
+       "3.00 nF"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%precision 2\n",
+    "a = 3e-9 F\n",
+    "a.autoscale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "display_name": "IPython (Python 3)",
-   "language": "python",
-   "name": "python3"
-  },
-  "name": "",
-  "signature": "sha256:2602f7a5861ad026a490565cc0a3b34fe8a47a700d54fc5b5670cc41a5e589c6"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
-  {
-   "cells": [
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "Autoscaling units"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "variables": {}
-     },
-     "source": [
-      "Using the `autoscale()` method, quantities can be automatically scaled:"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a = 1e-3 m\n",
-      "a.autoscale()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "1.0 $mm$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 1,
-       "text": [
-        "1.0 mm"
-       ]
-      }
-     ],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a = 0.0003 s \n",
-      "a.autoscale()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "300.0 $\\mu s$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 2,
-       "text": [
-        "300.0 us"
-       ]
-      }
-     ],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a = 1.0m\n",
-      "a.autoscale()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "1.0 $m$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "1.0 m"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    }
-   ],
-   "metadata": {}
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
- ]
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
