--- a/examples/pq-sympy.ipynb
+++ b/examples/pq-sympy.ipynb
@@ -1,192 +1,248 @@
 {
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sympy and PhysicalQuantities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sympy import *\n",
+    "init_printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 1 m * Matrix([ [1,2,3], [4,5,6]])\n",
+    "b = 1 cm * Matrix([ [1,2,3], [4,5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\left[\\begin{matrix}1 & 2 & 3\\\\4 & 5 & 6\\end{matrix}\\right]$ $\\text{m}$"
+      ],
+      "text/markdown": [
+       "$\\left[\\begin{matrix}1 & 2 & 3\\\\4 & 5 & 6\\end{matrix}\\right]$ $\\text{m}$"
+      ],
+      "text/plain": [
+       "Matrix([[1, 2, 3], [4, 5, 6]]) m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\left[\\begin{matrix}1.01 & 2.02 & 3.03\\\\4.04 & 5.05 & 6.06\\end{matrix}\\right]$ $\\text{m}$"
+      ],
+      "text/markdown": [
+       "$\\left[\\begin{matrix}1.01 & 2.02 & 3.03\\\\4.04 & 5.05 & 6.06\\end{matrix}\\right]$ $\\text{m}$"
+      ],
+      "text/plain": [
+       "Matrix([[1.01000000000000, 2.02000000000000, 3.03000000000000], [4.04000000000000, 5.05000000000000, 6.06000000000000]]) m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = Symbol('x')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$x$ $\\text{m}$"
+      ],
+      "text/markdown": [
+       "$x$ $\\text{m}$"
+      ],
+      "text/plain": [
+       "x m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 m * x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$2 x$ $\\text{m}$"
+      ],
+      "text/markdown": [
+       "$2 x$ $\\text{m}$"
+      ],
+      "text/plain": [
+       "2*x m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 2 m * x\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\frac{2 x}{3}$ $\\text{m}$"
+      ],
+      "text/markdown": [
+       "$\\frac{2 x}{3}$ $\\text{m}$"
+      ],
+      "text/plain": [
+       "2*x/3 m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAF0AAAAxCAYAAAC4R6XiAAAABHNCSVQICAgIfAhkiAAABO9JREFU\neJztmmtsFUUUx39SK9wqUiOviJWHKEU0gJWH1mjaaAy+YiQm4gfRaELik0SNiR/kk48Yo8EokcTI\nVUPUCEaU1sQnVVDBiI+CH6wmQlTwhQqKFKr1w382u17uY2Z6t9t77/6SZnb3zplz9nTmzMyZhZSK\n5DZgD7AVmJawLTVBG9AHnAP0ABuTNac22AJ0AhngG+CFZM2pfuYB/cDipA2pJR5HTh+XtCG1xE5g\ne9JGVCLDPOVOAZpIJ04vjvSUazflZgeZccBuT31xc8RgKvPt6W2m/MRB5npgBnrBofZXEewCDgD1\nDjLPxWRLxeHT008FxgPbgEOWMhOBbz10VSU+Tj/PlJ85yCwEXvbQVZUMxOlfOMjMBj710FWV+Dj9\nbFN2W9Y/AfjBQ48NV8bU7pBiDNqF9ptrG24G5sdgSzPwSgztxo5rTw96+U/Az5Yy8ym9nm/ALVwB\nXAM87yhTLh5BO/J+wuVzbDxoFL1lWX8M8GiJOnOAj027LmxF2c2kuAXo9bHBdUcahAnbXnkFhUPA\ndOBhNGL+cbRjLsr7/O0oV07ORZ0lVhvqgD9Rj7zOUuZZ7EJYFreevhxY4FA/Dr4H7vMRdInpzcDR\n5vpzi/rHAXuBf12NKkEdiqNvlrldF05Gq7IuH2GX8DLHlH3Al+Y6Q+HhdTnwqo9RJWgH3jd25NIC\nXIvC1STgRmAJ0AhMAJahEy4fnUvQrroRLZf7gE1x638ChYCgl48CPgKGF6ifxT43k8U+vKwCWvM8\nn2JsDEZvFvgKnd+2ohF3h6WOKDcAPwInmvuTgP3Ah4OhfzNyzCrkzGVo9r4oT92RwJMObWexc/oI\nlH7IlxlcYfQGvES4VG1Ck/bxDjYBzET5pUU5z39BK7lY9deh/24/WipNBo5FS8fH8tRfBFzq0H4W\nO6cvBB4o8NvknPvv8JzoIqxHn5dER+xpyNbcibzs+mcQ7kSju8ul5I9RT1M47OQji53T1wCnW9Sb\nZtq7wMGGXBpR3H4x5/lN5vnIwyQs9duuXmaZ8hD/zy52oFjWHHnWgOJXr2XbtoxC8XSbRd124CDw\nQeTZFEd9U9EIz43dbWhjtq9Im0X12zp9pim70eFFQI/5i4aSBcDrlu26UCw9nAEeAs4w9xeiDdx+\ncz8MuNNR315T7szRcz7hUvF2H/22Tg8ay5dDWQ9cErn3cfoIUzYUqXM1hXMtFwN3oTDYjA7OoyPt\nHuAZR5t6kOMmmft6NFkOB74GxqJVjbN+23V64PQteX7rAG5Fw/8A4aRbirHoCG+CMRZgBwofTwGr\nI3XHo5fdUaCtLjQvtABnonlnBbASvfw63A7RQTH5KpQ7akLvdb/RtRg4C7g7Lv2NhJPo9Dy/1wN/\nGAMvQ9m/crMUTWA1Qyty+K8UPjlfg4bPSrSULDebgNExtJsINjE9GPobKbys60CxPEM4AZWLqcDv\naENSFbg4/b0idTpRT3x3wBYdTpKHFYmxAfXweSXqdeG+zbbhNeCYGNod0uwB/sLtw6KUATAR9fJ3\nkjakmigV01tMGUesrllKOX2uKd+O25CUkA1oCej7SXWKI8FR3NqkDak2ioWXdpSIWjdIttQky1FW\n7Shzvxr4jeKZv5QBsh2dAmVQVq0XuDdRi6qUusj1bHS6342SVwcJPydIiYnRwBsoF95J+MlBSkpK\nSkpl8B/sEgahRtMp+gAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$\\int \\sqrt{\\frac{1}{x}}\\, dx$$"
+      ],
+      "text/plain": [
+       "⌠           \n",
+       "⎮     ___   \n",
+       "⎮    ╱ 1    \n",
+       "⎮   ╱  ─  dx\n",
+       "⎮ ╲╱   x    \n",
+       "⌡           "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Integral(sqrt(1/x), x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "display_name": "IPython (Python 3)",
-   "language": "python",
-   "name": "python3"
-  },
-  "name": "",
-  "signature": "sha256:940880bf84b07a272e5c613865e39237545824e08e901758be288dc7ce0fbadb"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
-  {
-   "cells": [
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "Sympy and PhysicalQuantities"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from sympy import *\n",
-      "init_printing()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a = 1 m * Matrix([ [1,2,3], [4,5,6]])\n",
-      "b = 1 cm * Matrix([ [1,2,3], [4,5,6]])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "$\\left[\\begin{matrix}1 & 2 & 3\\\\4 & 5 & 6\\end{matrix}\\right]$ $m$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "Matrix([[1, 2, 3], [4, 5, 6]]) m"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a+b"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "$\\left[\\begin{matrix}1.01 & 2.02 & 3.03\\\\4.04 & 5.05 & 6.06\\end{matrix}\\right]$ $m$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 4,
-       "text": [
-        "Matrix([[1.01000000000000, 2.02000000000000, 3.03000000000000], [4.04000000000000, 5.05000000000000, 6.06000000000000]]) m"
-       ]
-      }
-     ],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "x = Symbol('x')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "1 m * x"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "$x$ $m$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "x m"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a = 2 m * x\n",
-      "a"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "$2 x$ $m$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 7,
-       "text": [
-        "2*x m"
-       ]
-      }
-     ],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a/3"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "$\\frac{2 x}{3}$ $m$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 8,
-       "text": [
-        "2*x/3 m"
-       ]
-      }
-     ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    }
-   ],
-   "metadata": {}
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
- ]
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
